--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 
             <div id='main-header'>
-                <p>Наскільки велика російська армія?</p>
+                <p>Орда. Структура російської армії та підрозділи, залучені в Україні</p>
 
                 <div id='lead'>
-                    <p>Скільки бойових підрозділів Російська Федерація вже задіяла у війні з Україною? Чи є десь у "степах забайкалля" ще одна російська армія із потужною технікою, яку показують на парадах до "Дня перемоги"?</p>
+                    <p>Чи є десь у "степах Забайкалля" ще одна російська армія з потужною технікою, як її показують на парадах до "Дня перемоги"?</p>
                 </div>
             </div>
             <div id="pic-background">
