__base_dir__ setting

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                 <img id="image_map" src="pic/map.jpg">
             </div>
         </article>
+        <script>
+            window.__base_dir__ = "";
+        </script>
         <script src="js/ierarchy.js"></script>
         <!-- <script src="js/list.js"></script> -->
         <script src="js/map.js"></script>
