--- a/index_iframe.html
+++ b/index_iframe.html
@@ -15,6 +15,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.3/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.3/dist/js/uikit-icons.min.js"></script>
+    <script src="js/send_resize_iframe_msg.js"></script>
 
     <body>
         <article>
