--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="ОРДА. СТРУКТУРА РОСІЙСЬКОЇ АРМІЇ">
     <meta property="og:image" content="https://texty.github.io/project_russian_war_structure/pic/cover.png">
-    <meta property="og:description" content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією">
+    <meta property="og:description" content="Чи є десь у 'степах Забайкалля' ще одна російська армія з потужною технікою, як її показують на парадах до 'Дня перемоги'?">
     <meta property="og:url" content="https://texty.org.ua/d/2022/orcs-army-structure/">
 
 
@@ -52,14 +52,14 @@
 
             <div id="socio-icons">
                 <!--fb-->
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/war_video/" target="_blank" class="share-btn">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/orcs-army-structure/" target="_blank" class="share-btn">
                     <div class="icon-wrapper">
                         <img id="fb" src="pic/facebook.png">
                     </div>
                 </a>
 
                 <!--tw -->
-                <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/war_video/" target="_blank" class="share-btn">
+                <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/orcs-army-structure/" target="_blank" class="share-btn">
                     <div class="icon-wrapper">
                         <img id="tw" src="pic/twitter.png">
                     </div>
@@ -285,8 +285,8 @@
         </div>
         <section id="created_texty">
             <div>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://texty.org.ua/d/2020/trade-map/" class="share-btn"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://twitter.com/intent/tweet?text=http://texty.org.ua/d/2020/trade-map/" class="share-btn"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/orcs-army-structure/" class="share-btn"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/orcs-army-structure/" class="share-btn"><i class="fa-brands fa-twitter"></i></a>
                 <h3>Створено Текстами</h3>
             </div>
             <div>
@@ -581,6 +581,19 @@
         </script>
         <script>
             colored_links()
+        </script>
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-18136548-1']);
+            _gaq.push(['_trackPageview']);
+            (function() {
+                var ga = document.createElement('script');
+                ga.type = 'text/javascript';
+                ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(ga, s);
+            })();
         </script>
     </body>
 
