--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
             <div id='mobile-explainer'>
-                Ви переглядаєте мобільну версію візуалізації, для того щоб переглянути повну візуалізацію скористуйтесь комп'ютером або пристроєм із шириною екрану більше ніж 1279 пікселів.
+                Ви переглядаєте мобільну версію візуалізації. Для того, щоб переглянути повну візуалізацію, - скористайтесь комп'ютером або пристроєм із шириною екрану більше ніж 1279 пікселів.
             </div>
 
             <div id='main_div'>
@@ -238,7 +238,7 @@
                 </p>
             </div>
             <div class="semi-header">
-                Які сили росія задіяла в Україні?
+                Які сили Росія задіяла в Україні?
             </div>
             <div class='usual_text_block'>
 
