--- a/index.html
+++ b/index.html
@@ -91,10 +91,15 @@
                 <p>Але російська армія справді велика. За їхнім законодавством вона має налічувати понад 900 тис. військовослужбовців і ще 200 тис. цивільних службовців у “мирний час”, а мобілізаційний резерв під час воєнного стану сягає понад 17 млн.
                 </p>
 
-                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-64, які зараз почали активно розконсервовувати, до Т-34, які вже якось їздили українською землею під час другої радянської окупації. Мільйони одиниць зброї, зокрема “трьохлінійки”,
-                    ППШ та “кулемети Максима”, мільярди патронів і сотні тисяч артилерійських снарядів.
+                <p>В російській армії на початок 2022 року було більше 3000 танків від Т-72 до Т-90, з який майже півтори тисячі вже були знищені українськими військовими.
                 </p>
-
+                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-90, до Т-72 - за офіційними даними Military Balance. Т-62, наразі розконсервовують для відправки в Україну у звіті ні за 2021 ні за 2022 роки вони не згадуються, але факт є.
+                </p>
+                <p>Можливо у Росії є ще бази на яких зберігається військова техніка, але в якому вона стані сказати важко, можливо суто корпуси. Так наприклад у 2014 році на базах зберігання в Росії було 18 тисяч танків, включаючи 2800 Т-55. Де вони зараз
+                    невідомо, можливо розпиляні на металобрухт.
+                </p>
+                <p>Також на складах росія зберігає мільйони одиниць зброї, зокрема автомати Калашникова різних років, “трьохлінійки”, ППШ та “кулемети Максима”, мільярди патронів і сотні тисяч артилерійських снарядів.
+                </p>
                 <p>Російська армія, можливо, недолуга, просякнута корупцією, шабкозакидством, вона має небагато новітнього озброєння та навчених і мотивованих бійців, але її розміри не варто недооцінювати, як і потужність та можливість завдати українцям
                     ще багато горя.
                 </p>
@@ -106,7 +111,8 @@
                     “військовий округ — армія — бригада”. Такою є структура в країнах НАТО, зокрема і в українській армії.
                 </p>
 
-                <p>Реформу не було завершено, й армія РФ лишилася змішаною — десь є дивізії та полки, десь бригади, а також й армії й армійські корпуси.
+                <p>Реформу не було завершено до кінця завершено, й армія РФ лишилася змішаною — десь є дивізії та полки, десь бригади, а також й армії й армійські корпуси. Більше того останніми роками Росія почала знову розгортати бригади у дивізії та відроджувати
+                    полки.
                 </p>
                 <p>
                     Бригадна структура більше відповідає веденню новітніх війн, військові експерти називають їх війнами четвертого покоління — високоінтенсивними, з великими маршкидками, застосуванням сучасної техніки, озброєнням, новітніх технологій, а головне — вузько
@@ -226,7 +232,7 @@
 
                 <p>У 1960-х роках навколо Москви в межах Московського військового округу почали розбудовувати систему протиповітряної оборони — зараз ці підрозділи належать до складу Західного військового округу.
                 </p>
-                <p>Навколо Москви було створено 1-шу армію протиповітряної оборони у складі 3-ї дивізії, яка зокрема мала захищати Москву від “потенційного” ядерного удару зі сторони США та Європи. </p>
+                <p>Навколо Москви було створено 1-шу армію протиповітряної оборони у складі 3-х дивізії, яка зокрема мала захищати Москву від “потенційного” ядерного удару зі сторони США та Європи. </p>
                 <p>Фактично це армія оборони, її підрозділи можна було б залучити у війну проти України, але лише як ППО. </p>
 
                 <p>Також ударними не можуть бути зв’язківці, які мають тільки легке озброєння та переважно техніку для зв’язку й радіолокаційної боротьби, у інженерних та залізничних підрозділів теж відсутнє важке озброєння — вони є підрозділами підтримки.
@@ -250,7 +256,7 @@
 
                 <p>Також у складі Східного військового округу перебуває 11 баз зберігання, з яких найперше знімають техніку й відправляють в Україну, зокрема танки Т-64 та Т-62.</p>
 
-                <p>З Південного військового округу залучено більшість підрозділів (армійського та дивізійного рівня), крім тих, які базуються в Кубанському краї та в Криму.</p>
+                <p>З Південного військового округу залучено більшість підрозділів (армійського та дивізійного рівня), крім тих, які базуються на Кубані та в Криму.</p>
 
                 <p>Із Західного військового округу залучено підрозділи 1-ї танкової армії, 76-ї та 98-ї повітряно-десантної дивізії, 20-ї армії, 144-ї та 3-ї мотострілецьких дивізій.</p>
 
