--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
                 <p>В російській армії на початок 2022 року було більше 3000 танків від Т-72 до Т-90, з який майже півтори тисячі вже були знищені українськими військовими.
                 </p>
-                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-90, до Т-72 - за офіційними даними Military Balance. Т-62, наразі розконсервовують для відправки в Україну у звіті ні за 2021 ні за 2022 роки вони не згадуються, але факт є.
+                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-90, до Т-72 - за офіційними даними Military Balance (більшість із них Т-72 та Т-80 різних модифікацій). Т-62, наразі розконсервовують для відправки в Україну у звіті ні за 2021
+                    ні за 2022 роки вони не згадуються, але факт є.
                 </p>
                 <p>Можливо у Росії є ще бази на яких зберігається військова техніка, але в якому вона стані сказати важко, можливо суто корпуси. Так наприклад у 2014 році на базах зберігання в Росії було 18 тисяч танків, включаючи 2800 Т-55. Де вони зараз
                     невідомо, можливо розпиляні на металобрухт.
