--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             function up_image(option) {
                 console.log(option)
                 var fullCoverImage = document.getElementById("image_1")
-                fullCoverImage.setAttribute("src", "pic/" + option + ".jpg");
+                fullCoverImage.setAttribute("src", "pic/" + option + ".png");
                 console.log(option)
             }
 
