--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
                 <p>Але російська армія справді велика. За їхнім законодавством вона має налічувати понад 900 тис. військовослужбовців і ще 200 тис. цивільних службовців у “мирний час”, а мобілізаційний резерв під час воєнного стану сягає понад 17 млн.
                 </p>
 
-                <p>В російській армії на початок 2022 року було більше 3000 танків від Т-72 до Т-90, з який майже півтори тисячі вже були знищені українськими військовими.
+                <p>В російській армії на початок 2022 року було більше 3000 танків від Т-72 до Т-90, з яких майже півтори тисячі вже були знищені українськими військовими.
                 </p>
-                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-90, до Т-72 - за офіційними даними Military Balance (більшість із них Т-72 та Т-80 різних модифікацій). Т-62, наразі розконсервовують для відправки в Україну у звіті ні за 2021
+                <p>На базах зберігання перебуває понад 10 тис. танків — від Т-90 до Т-72, за офіційними даними Military Balance (більшість із них - Т-72 та Т-80 різних модифікацій). Т-62 наразі розконсервовують для відправки в Україну - у звіті ні за 2021,
                     ні за 2022 роки вони не згадуються, але факт є.
                 </p>
-                <p>Можливо у Росії є ще бази на яких зберігається військова техніка, але в якому вона стані сказати важко, можливо суто корпуси. Так наприклад у 2014 році на базах зберігання в Росії було 18 тисяч танків, включаючи 2800 Т-55. Де вони зараз
-                    невідомо, можливо розпиляні на металобрухт.
+                <p>Можливо, у Росії є ще бази, на яких зберігається військова техніка, але в якому вона стані - сказати важко, можливо, це суто корпуси. Так, наприклад, у 2014 році на базах зберігання в Росії було 18 тисяч танків, включаючи 2800 Т-55. Де
+                    вони зараз - невідомо, можливо, розпиляні на металобрухт.
                 </p>
-                <p>Також на складах росія зберігає мільйони одиниць зброї, зокрема автомати Калашникова різних років, “трьохлінійки”, ППШ та “кулемети Максима”, мільярди патронів і сотні тисяч артилерійських снарядів.
+                <p>Також на складах Росія зберігає мільйони одиниць зброї, зокрема, автомати Калашникова різних років, “трьохлінійки”, ППШ та “кулемети Максима”, мільярди патронів і сотні тисяч артилерійських снарядів.
                 </p>
-                <p>Російська армія, можливо, недолуга, просякнута корупцією, шабкозакидством, вона має небагато новітнього озброєння та навчених і мотивованих бійців, але її розміри не варто недооцінювати, як і потужність та можливість завдати українцям
+                <p>Російська армія, можливо, недолуга, просякнута корупцією, шабкозакиданням, вона має небагато новітнього озброєння та навчених і мотивованих бійців, але її розміри не варто недооцінювати, як і потужність та можливість завдати українцям
                     ще багато горя.
                 </p>
 
@@ -112,12 +112,12 @@
                     “військовий округ — армія — бригада”. Такою є структура в країнах НАТО, зокрема і в українській армії.
                 </p>
 
-                <p>Реформу не було завершено до кінця завершено, й армія РФ лишилася змішаною — десь є дивізії та полки, десь бригади, а також й армії й армійські корпуси. Більше того останніми роками Росія почала знову розгортати бригади у дивізії та відроджувати
+                <p>Реформу не було завершено до кінця, й армія РФ лишилася змішаною — десь є дивізії та полки, десь бригади, а також і армії та армійські корпуси. Більше того, останніми роками Росія почала знову розгортати бригади у дивізії та відроджувати
                     полки.
                 </p>
                 <p>
-                    Бригадна структура більше відповідає веденню новітніх війн, військові експерти називають їх війнами четвертого покоління — високоінтенсивними, з великими маршкидками, застосуванням сучасної техніки, озброєнням, новітніх технологій, а головне — вузько
-                    спрямованими спеціалістами та взаємодією різних родів військ.
+                    Бригадна структура більше відповідає веденню новітніх війн, військові експерти називають їх війнами четвертого покоління — високоінтенсивними, з великими маршкидками, застосуванням сучасної техніки, озброєння, новітніх технологій, а головне — вузько спрямованими
+                    спеціалістами та взаємодією різних родів військ.
                 </p>
             </div>
 
@@ -202,7 +202,7 @@
                 <p>Окремі батальйони (саперний, інженерний, зв’язку) можуть мати й окремі роти або взводи. Кожен підрозділ має наскрізний номер для всіх військових сил.
                 </p>
 
-                <p><b>Полк</b>має схожу з бригадою структуру, але він менший за кількістю. Якщо в бригаді близько 4-5 тис. осіб, то полк налічує 1-2 тис. військових.
+                <p><b>Полк</b> має схожу з бригадою структуру, але він менший за кількістю. Якщо в бригаді близько 4-5 тис. осіб, то полк налічує 1-2 тис. військових.
                 </p>
 
                 <p>Бригада та полк є окремими тактичними одиницями й мають власні окремі військові частини, тож можна точно встановити місце їх постійної дислокації.
@@ -224,8 +224,8 @@
             </div>
             <div class='usual_text_block'>
 
-                <p>Не всі підрозділи у складі бригад і полків беруть участь у бойових діях. <b>За стандартами НАТО, на кожного солдата зі зброєю в руках припадає майже десять з каструлями, папірцями, клавіатурами та ящиками.</b> Є підрозділи ППО, які не
-                    часто перебувають “на нулі”, є зв’язківці, інженери, інструктори, підрозділи матеріально-технічного забезпечення, логісти тощо. З бригади в зіткненні “на нулі” беруть участь лише кілька лінійних батальйонів та окремі роти, як-от снайперів
+                <p>Не всі підрозділи у складі бригад і полків беруть участь у бойових діях. <b>За стандартами НАТО, на кожного солдата зі зброєю в руках припадає майже десять з каструлями, папірцями, клавіатурами та ящиками.</b> Є підрозділи ППО, які нечасто
+                    перебувають “на нулі”, є зв’язківці, інженери, інструктори, підрозділи матеріально-технічного забезпечення, логісти тощо. З бригади в зіткненні “на нулі” беруть участь лише кілька лінійних батальйонів та окремі роти, як-от снайперів
                     чи саперів.
                 </p>
 
@@ -233,7 +233,7 @@
 
                 <p>У 1960-х роках навколо Москви в межах Московського військового округу почали розбудовувати систему протиповітряної оборони — зараз ці підрозділи належать до складу Західного військового округу.
                 </p>
-                <p>Навколо Москви було створено 1-шу армію протиповітряної оборони у складі 3-х дивізії, яка зокрема мала захищати Москву від “потенційного” ядерного удару зі сторони США та Європи. </p>
+                <p>Навколо Москви було створено 1-шу армію протиповітряної оборони у складі 3-х дивізій, яка, зокрема, мала захищати Москву від “потенційного” ядерного удару зі сторони США та Європи. </p>
                 <p>Фактично це армія оборони, її підрозділи можна було б залучити у війну проти України, але лише як ППО. </p>
 
                 <p>Також ударними не можуть бути зв’язківці, які мають тільки легке озброєння та переважно техніку для зв’язку й радіолокаційної боротьби, у інженерних та залізничних підрозділів теж відсутнє важке озброєння — вони є підрозділами підтримки.
@@ -241,7 +241,7 @@
 
                 <p>І російська армія має чимало таких підрозділів.</p>
 
-                <p>До того ж Чорне море вважають безядерною зоною, тому перебування тут кораблів чи підводних човнів з ядерними двигунами заборонено. Це одна з причин, чому Росія не завела в Чорне море атомні підводні човни до закриття Туреччиною проток.
+                <p>До того ж Чорне море вважають без'ядерною зоною, тому перебування тут кораблів чи підводних човнів з ядерними двигунами заборонено. Це одна з причин, чому Росія не завела в Чорне море атомні підводні човни до закриття Туреччиною проток.
                 </p>
             </div>
             <div class="semi-header">
@@ -263,10 +263,10 @@
 
                 <p>Центральний округ — 41-ша армія, 41-ша дивізія ППО та 90-та танкова дивізія.</p>
 
-                <p>Також Росія навіть у загальновійськових боях залучає підрозділи Росгвардії — легко озброєних внутрішніх військ і “народну міліцію Л\ДНР” — ці підрозділи не ввійшли до нашої графіки.</p>
+                <p>Також Росія навіть у загальновійськових боях залучає підрозділи Росгвардії — легко озброєних внутрішніх військ, і “народну міліцію Л\ДНР” — ці підрозділи не ввійшли до нашої графіки.</p>
 
-                <p>Це не вичерпний перелік підрозділів, до того ж не весь склад цих армій і дивізій зараз воює в Україні, але він свідчить, що Росія справді залучила більшість своїх “бойових” частин і додаткової “готової та спорядженої” армії у степах Забайкалля,
-                    в Уральських чи Алтайських горах, найімовірніше, немає. Так, є окремі й бойові підрозділи та підрозділи підтримки, але сформованих організованих частин — на щастя, ні.</p>
+                <p>Це не вичерпний перелік підрозділів, до того ж, не весь склад цих армій і дивізій зараз воює в Україні, але він свідчить, що Росія справді залучила більшість своїх “бойових” частин. І додаткової “готової та спорядженої” армії у степах
+                    Забайкалля, в Уральських чи Алтайських горах, найімовірніше, немає. Так, є окремі бойові підрозділи та підрозділи підтримки, але сформованих організованих частин — на щастя, немає.</p>
 
                 <p>Росія у своїй європейській частині спромоглася сконцентрувати майже всі наявні військові сили, й поповнення підрозділів відбувається шляхом доукомплектування, а не створення чи введення в бій нових. Такі підрозділи вводять “з коліс”, вони
                     мають низьку мотивацію, у них відсутній бойовий досвід і почасти застаріла техніка. “Приховано мобілізованих” відправляють без серйозного навчання та бойового злагодження.</p>
